--- a/app/views/test.ejs
+++ b/app/views/test.ejs
@@ -2,7 +2,7 @@
 <div class="container">
 <div class="row">
     <div class="col-md-3">
-        <button type="button" class="btn btn-danger"><%= title %></button>
+        <a href="/account/test"><button type="button" class="btn btn-danger"><%= title %></button></a>
     </div>
 </div>
 </div>
